<resources>
    <string name="app_name">EdCerts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="head_passphrase">Passphrase</string>
    <string name="button_login">Login</string>
    <string name="head_url">Invitation Url</string>
    <string name="button_add">Add</string>
    <string name="head_passcode">Passcode</string>
    
    <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="activity_certificate">Certificate</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_proceed">Proceed</string>

    <string-array name="verification_steps">
        <item>Getting Transaction Metadata</item>
        <item>Computing Hash of Degree</item>
        <item>Comparing both Local and On-Chain Hash</item>
        <item>Verify Issuer</item>
        <item>Verify Issuer Revocation Status</item>
        <item>Verified Successfully!</item>
    </string-array>
</resources>
